k8s/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/hsienbro/backend:latest
          ports:
          - containerPort: 8888
          livenessProbe: 
            httpGet:
              path: /healthz
              port: 8888
            initialDelaySeconds: 10
            periodSeconds: 5
