k8s/deploy-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deploy-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: my-mongo
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 200m
              memory: 200Mi
          livenessProbe: 
            httpGet:
              path: /healthz
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 5
