k8s/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/hsienbro/frontend:latest
          ports:
            - containerPort: 5173
          livenessProbe: 
            httpGet:
              path: /healthz
              port: 5173
            initialDelaySeconds: 10
            periodSeconds: 5
