k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: BKend
spec:
  containers:
    - name: BK
      image: ghcr.io/hsienbro/backend:latest
      ports: 
        - containerPort: 8888
    - name: db
      image: mongo
      ports:
        - containerPort: 27017
      resources:
        requests:
          cpu: 10m
          memory: 10Mi
        limits:
          cpu: 200m
          memory: 200Mi
