k8s/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mongo
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
